# devday_website

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-3rd  Pipfile  README-DEV.md  README-PROD.md  README.md  README.prod.md  Vagrantfile  app-dev.Dockerfile  app-prod.Dockerfile  backup.sh  confirm.html  dev_settings.bat  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tools.yml  docker-compose.yml  dockerrun.sh  get_slides_info.py  impressum.php  index.php  prod.sh  pyproject.toml  python_base.Dockerfile  run.sh  rundev.sh
.github/workflows/: dev-build.yml  main.yml
2015/: CNAME  Thumbs.db  devday2015.html  generic.html  index.html
2015/css/: skel.css  skel.min.css  style-mobile.min.css  style-narrow.min.css  style.css  style.min.css
2015/js/: Gruntfile.js  map.min.js  package.json
config/: compass.rb
contents/: contact.php  follow.php  header.php  map.php  register_scripts.php  sessions.php  social.php  sponsors.php  subheader.php
contents/speaker/: adam-bien.php  artur-speth.php.disabled  carsten-czarski.php  dave-farley.php  denis-loh.php  frank-lamack.php  hendrik-loesch.php  jan-dittberner.php  jeremias-arnstadt.php  michael-schneider.php  natalie-bauder.php  peter-fox.php  peter-lehmann.php  sascha-askani.php.disabled  thomas-haase.php
contents/tweets/: tweet1.php  tweet2.php  tweet3.php  tweet4.php
css/: bootstrap-blessed1.css  bootstrap.css
css/custom/: custom.css
devday/: .gitignore  Pipfile  cmsdata.json  dev_requirements.txt  manage.py  requirements.txt  setup.cfg
devday/attendee/: admin.py  apps.py  cms_menus.py  cms_toolbars.py  csv_urls.py  forms.py  models.py  signals.py  urls.py  views.py
devday/deployment/: .gitignore  Dockerfile  build.sh  requirements.txt
devday/devday/: apps.py  auth_urls.py  cms_apps.py  cms_menus.py  cms_toolbars.py  contextprocessors.py  extras.py  forms.py  maintainance_urls.py  registration_urls.py  settings.py  urls.py  vault_integration.py  views.py
devday/event/: __init__.py  admin.py  api_views.py  apps.py  cms_menus.py  contextprocessors.py  management.py  models.py
devday/speaker/: admin.py  apps.py  (+5 more)
docs/: Makefile  meetup-slides-2022-10-12.md  system_context.puml  system_context_new.puml
fonts/: icomoon.eot
frontend/: README.md  gulpfile.js  package-lock.json  package.json  run_docker.sh
js/: init.js
lang/: de_DE.php
packer/: centos7_template.json
public/: impressum.php  index.php
puppet/: hiera.yaml
scss/: _badges.scss  _breadcrumbs.scss  _button-groups.scss  _buttons.scss  _carousel.scss  _code.scss  _dropdowns.scss  _forms.scss  _glyphicons.scss  _grid.scss  _input-groups.scss  _jumbotron.scss  _labels.scss  _list-group.scss  _mixins.scss  _modals.scss  _navbar.scss  _navs.scss  _pager.scss  _pagination.scss  _panels.scss  _popovers.scss  _progress-bars.scss  _responsive-utilities.scss  _scaffolding.scss  _tables.scss  _tabs.scss  _theme.scss  _thumbnails.scss  _tooltip.scss  _type.scss  _variables.scss  _wells.scss  bootstrap.scss
(+546 files in other folders)
