[tool.poetry]
name = "devday_website"
version = "0.1.0"
description = "Dev Day Website"
authors = ["Jan Dittberner", "Jeremias Arnstadt", "Stefan Bethke", "Jens Lauterbach", "Felix Herzog"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.7,<4"
Django = "<3"
django-cms = "<3.9"
requests = "^2.27.1"
psycopg2-binary = "<2.9"
python-magic = "^0.4.25"
django-treebeard = "<4.5"
Pillow = "^9.1.0"
django-crispy-forms = "^1.14.0"
djangocms-admin-style = "^3.1.1"
djangocms-link = "^3.0.0"
djangocms-video = "^3.0.0"
djangocms-picture = "^4.0.0"
djangocms-style = "^3.0.0"
djangocms-attributes-field = "^2.1.0"
django-model-utils = "^4.2.0"
djangocms-text-ckeditor = "^5.0.1"
djangocms-file = "^3.0.0"
django-ckeditor = "^5.0.0"
django-file-form = "<3.5"
django-registration = "^3.2"
django-select2 = "^7.10.0"
beautifulsoup4 = "^4.11.1"
html2text = "^2020.1.16"
lorem = "^0.1.1"
luhn = "^0.2.0"
lxml = "^4.8.0"
stringcase = "^1.2.0"
django-ordered-model = "<3.7"
django-formtools = "^2.3"
django-postgres-extra = "^2.0.5"
djangorestframework = "^3.13.1"
djangocms-column = "^2.0.0"
django-debug-toolbar = "^3.2.4"
APScheduler = "^3.9.1"
drf-spectacular = "^0.22.1"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.3"
coveralls = "^3.3.1"
dj-inmemorystorage = "^2.1.0"
mock = "^4.0.3"
reportlab = "^3.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
